Updated contrast issues with header

--- a/CSS/header.css
+++ b/CSS/header.css
@@ -4,7 +4,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: var(--spacing-md);
-    background-color: rgb(236, 236, 236)
+    background-color: rgb(190, 190, 190)
 }
 
 #logo {
